frontend/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-ci
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: frontend-ci
  type: ClusterIP
